--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <!-- Bootstrap CSS v5.0.2 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"  integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
     <header>
-        <div class="bg-dark d-flex align-items-center justify-content-end p-2">
+        <div class="bg-dark d-flex align-items-center justify-content-end p-2 px-3">
             <img src="./img/sony_logo.svg" alt="logo sony. scritta semplice bianca">
         </div>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -92,7 +93,7 @@
                     </ul>
                 </div>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item dropdown">
                             <a class="nav-link text-body" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             My PLaystation <img class="chevron" src="./img/chevron-down-solid.svg" alt="">
@@ -108,9 +109,8 @@
                             <button type="button" class="btn btn_rounder bg_darkgrey text-white mx-3">Accedi</button>
                         </li>
 
-                        <li class="icon">
+                        <li class="icon mx-2">
                             <i class="fas fa-search"></i>
-                            cane
                         </li>
                     </ul>
                 </div>
