--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
-  <body>
+  <body class="debug">
     <header>
-        <div class="bg-dark d-flex align-items-center justify-content-end p-2 px-3">
+        <div class="bg-dark d-flex align-items-center justify-content-end p-2 px-3 sony_logo">
             <img src="./img/sony_logo.svg" alt="logo sony. scritta semplice bianca">
         </div>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -105,11 +105,11 @@
                                 <li><a class="dropdown-item" href="#">Something else here</a></li>
                             </ul>
                         </li>
-                        <li>
+                        <li class="d-flex align-items-center">
                             <button type="button" class="btn btn_rounder bg_darkgrey text-white mx-3">Accedi</button>
                         </li>
 
-                        <li class="icon mx-2">
+                        <li class="icon mx-2 d-flex align-items-center">
                             <i class="fas fa-search"></i>
                         </li>
                     </ul>
@@ -117,6 +117,10 @@
             </div>
           </nav>
     </header>
+
+    <!-- <section class="one jumbo">
+        <img src="./img/jumbo-bg.png" alt="bald person in a space suite">
+    </section> -->
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
   </body>
