finito header univoco

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
             <img src="./img/sony_logo.svg" alt="logo sony. scritta semplice bianca">
         </div>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="./img/play_logo.svg" alt=""></a>
+            <div class="container-fluid py-1">
+                <a class="navbar-brand py-0" href="#"><img src="./img/play_logo.svg" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item dropdown">
-                        <a class="nav-link text-body" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link text-body py-0" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Giochi <img class="chevron" src="./img/chevron-down-solid.svg" alt="">
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -36,7 +36,7 @@
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link text-body" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link text-body py-0" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Hardware <img class="chevron" src="./img/chevron-down-solid.svg" alt="">
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -47,7 +47,7 @@
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link text-body" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link text-body py-0" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Servizi <img class="chevron" src="./img/chevron-down-solid.svg" alt="">
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -58,7 +58,7 @@
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link text-body" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link text-body py-0" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Novità <img class="chevron" src="./img/chevron-down-solid.svg" alt="">
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -69,7 +69,7 @@
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link text-body" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link text-body py-0" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Fai acquisti <img class="chevron" src="./img/chevron-down-solid.svg" alt="">
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -80,7 +80,7 @@
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link text-body" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link text-body py-0" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Supporto <img class="chevron" src="./img/chevron-down-solid.svg" alt="">
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -95,7 +95,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item dropdown">
-                            <a class="nav-link text-body" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link text-body py-0" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             My PLaystation <img class="chevron" src="./img/chevron-down-solid.svg" alt="">
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -117,10 +117,23 @@
             </div>
           </nav>
     </header>
+    
+    <!-- **********/siteheader*************** -->
+    
+    <section class="one jumbo">
+        <div class="d-flex column align-items-start justify-content-end text-white h100 container container-sm container-md container-xl">
+            <div>
+                <img src="./img/returnal-hero-banner-logo.png" alt="scritta returnal gialla">
+            </div> 
+            <h3>Rompi il cerchio</h3>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque eaque aperiam praesentium nobis voluptas veritatis beatae totam magni libero reiciendis, ipsam id voluptate minima nisi blanditiis ad maxime vel corrupti!
+            </p>
+            <button class="btn btn_rounder bg_crimson">
 
-    <!-- <section class="one jumbo">
-        <img src="./img/jumbo-bg.png" alt="bald person in a space suite">
-    </section> -->
+            </button>
+        </div>
+    </section>
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
   </body>
