--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="bg-dark d-flex align-items-center justify-content-end p-2 px-3 sony_logo">
             <img src="./img/sony_logo.svg" alt="logo sony. scritta semplice bianca">
         </div>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-xl navbar-light bg-light">
             <div class="container-fluid py-1">
                 <a class="navbar-brand py-0" href="#"><img src="./img/play_logo.svg" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -119,18 +119,18 @@
     </header>
     
     <!-- **********/siteheader*************** -->
-    
+
     <section class="one jumbo">
-        <div class="d-flex column align-items-start justify-content-end text-white h100 container container-sm container-md container-xl">
+        <div class="d-flex flex-column align-items-start justify-content-end text-white height container container-sm container-md container-xl py-5">
             <div>
                 <img src="./img/returnal-hero-banner-logo.png" alt="scritta returnal gialla">
             </div> 
             <h3>Rompi il cerchio</h3>
             <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque eaque aperiam praesentium nobis voluptas veritatis beatae totam magni libero reiciendis, ipsam id voluptate minima nisi blanditiis ad maxime vel corrupti!
+                Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico. disponibile in esclusiva su PS5.
             </p>
-            <button class="btn btn_rounder bg_crimson">
-
+            <button class="btn btn_rounder bg_crimson text-white">
+                Acquista ora
             </button>
         </div>
     </section>
