--- a/index.html
+++ b/index.html
@@ -134,6 +134,54 @@
             </button>
         </div>
     </section>
+
+<!-- *************/section1 ***************** -->
+    <section class="two py-5">
+        <div class="griglia container container-sm container-md container-xl d-flex flex-wrap">
+            <div class="col-6 col-sm-4 col-md-4 col-xl-2 g-2">
+                <div class="thumb p-2 active">
+                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                </div>
+            </div>
+            <div class="col-6 col-sm-4 col-md-4 col-xl-2">
+                <div class="thumb p-2">
+                    <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                </div>
+            </div>
+            <div class="col-6 col-sm-4 col-md-4 col-xl-2">
+                <div class="thumb p-2">
+                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                </div>
+            </div>
+            <div class="col-6 col-sm-4 col-md-4 col-xl-2">
+                <div class="thumb p-2">
+                    <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                </div>
+            </div>
+            <div class="col-6 col-sm-4 col-md-4 col-xl-2">
+                <div class="thumb p-2">
+                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                </div>
+            </div>
+            <div class="col-6 col-sm-4 col-md-4 col-xl-2">
+                <div class="thumb p-2">
+                    <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+
+
+
+
+
+
+
+
+
+
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
   </body>
