--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 </div>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item dropdown">
+                        <li class="nav-item dropdown d-flex align-items-center">
                             <a class="nav-link text-body py-0" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             My PLaystation <img class="chevron" src="./img/chevron-down-solid.svg" alt="">
                             </a>
@@ -110,7 +110,7 @@
                         </li>
 
                         <li class="icon mx-2 d-flex align-items-center">
-                            <i class="fas fa-search"></i>
+                            <img src="./img/lens.svg" alt="lens image">
                         </li>
                     </ul>
                 </div>
@@ -172,6 +172,36 @@
 
     </section>
 
+    <!-- *************/section2 ***************** -->
+
+    <section class="py-5 three" >
+        <div class="section_title">
+            <h5 class="text_blue text-uppercase text-center">
+                play has no limits
+            </h5>
+            <h1 class="text-center">
+                Ecco la Playstation 5
+            </h1>
+            <p class="text-muted text-center mb-4">
+                Tuffati in nuove possibilità di gioco completamente inaspettate
+            </p>
+            <div class="d-flex align-items-center container container-sm container-md container-xl flex-wrap">
+                <div class="col-12 col-sm-12 col-md-5 col-xl-5">
+                    <h1 class="py-2 px-2">
+                        Console PlayStation 5
+                    </h1>
+                    <p class="text-muted mb-4 py-2 px-2">
+                        Sperimenta la nuova generazione di incredibili giochi PlayStation
+                    </p>
+                    <button class="btn_rounder bg_blue text-white p-2 px-3">Maggiori Informazioni</button>
+                </div>
+                <div class="col-12 col-sm-12 col-md-7 col-xl-7 img_cont text-center px-3">
+                    <img src="./img/playstation-5-thumb.png" alt="ps5 picture">
+                </div>
+            </div>
+        </div>
+
+    </section>
 
 
 
