--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
             <div>
                 <img src="./img/returnal-hero-banner-logo.png" alt="scritta returnal gialla">
             </div> 
-            <h3>Rompi il cerchio</h3>
-            <p>
+            <h2 class="py-3">Rompi il cerchio</h2>
+            <p class="py-3">
                 Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico. disponibile in esclusiva su PS5.
             </p>
             <button class="btn btn_rounder bg_crimson text-white">
@@ -185,24 +185,72 @@
             <p class="text-muted text-center mb-4">
                 Tuffati in nuove possibilità di gioco completamente inaspettate
             </p>
-            <div class="d-flex align-items-center container container-sm container-md container-xl flex-wrap">
-                <div class="col-12 col-sm-12 col-md-5 col-xl-5">
-                    <h1 class="py-2 px-2">
-                        Console PlayStation 5
-                    </h1>
-                    <p class="text-muted mb-4 py-2 px-2">
-                        Sperimenta la nuova generazione di incredibili giochi PlayStation
-                    </p>
-                    <button class="btn_rounder bg_blue text-white p-2 px-3">Maggiori Informazioni</button>
+        </div>
+
+        <div class="d-flex align-items-center container container-sm container-md container-xl flex-wrap">
+            <div class="col-12 col-sm-12 col-md-5 col-xl-5">
+                <h1 class="py-2 px-2">
+                    Console PlayStation 5
+                </h1>
+                <p class="text-muted mb-4 py-2 px-2">
+                    Sperimenta la nuova generazione di incredibili giochi PlayStation
+                </p>
+                <button class="btn_rounder bg_blue text-white p-2 px-3">Maggiori Informazioni</button>
+            </div>
+            <div class="col-12 col-sm-12 col-md-7 col-xl-7 img_cont text-center px-3">
+                <img src="./img/playstation-5-thumb.png" alt="ps5 picture">
+            </div>
+        </div>
+
+        <div class="container container-sm container-md container-xl d-flex flex-wrap peripherals">
+            <div class="col-4 col-sm-4 col-md-20 col-xl-20 px-3 thumb_cont pb-3">
+            <img src="./img/playstation-5-thumb.png" alt="ps5 pic">
+                <div class="hidden py-3 text-muted">
+                    Console PS5
                 </div>
-                <div class="col-12 col-sm-12 col-md-7 col-xl-7 img_cont text-center px-3">
-                    <img src="./img/playstation-5-thumb.png" alt="ps5 picture">
+            </div>
+            <div class="col-4 col-sm-4 col-md-20 col-xl-20 thumb_cont pb-3 px-1">
+                <img src="./img/joypad-thumb.png" alt="joypad pic">
+                <div class="hidden py-3 text-muted">
+                    Controller wireless Dualsense<i class="fas fa-trademark"></i>
+                </div>
+            </div>
+            <div class="col-4 col-sm-4 col-md-20 col-xl-20 thumb_cont pb-3 px-1">
+                <img src="./img/headset-thumb.png" alt="headset pic">
+                <div class="hidden py-3 text-muted">
+                    Cuffie wireless con microfono PULSE 3<i class="fas fa-trademark"></i>
+                </div>
+            </div>
+            <div class="col-4 col-sm-4 col-md-20 col-xl-20 thumb_cont pb-3 px-1">
+                <img src="./img/remote-thumb.png" alt="remote pic">
+                <div class="hidden py-3 text-muted">
+                    Telecomando Media
+                </div>
+            </div>
+            <div class="col-4 col-sm-4 col-md-20 col-xl-20 thumb_cont pb-3 px-1">
+                <img src="./img/camera-thumb.jpg" alt="camera pic">
+                <div class="hidden py-3 text-muted">
+                    Telecamera HD
                 </div>
             </div>
         </div>
 
     </section>
 
+    <section class="four jumbo py-5">
+        <div class="d-flex flex-column align-items-start justify-content-around text-white height container container-sm container-md container-xl py-5">
+            <div>
+                <img src="./img/it-takes-two-logo.png" alt="it takes two scritta gialla">
+            </div> 
+            <h2>Un'avventura cooperativa selvaggia ti attende</h2>
+            <p>
+                Tova un amico e partite insieme per l'avventura più folle delle vostre vite in It Takes Two, un gioco d'avventura cooperativa a piattaforme che stravolge il suo genere.
+            </p>
+            <button class="btn btn_rounder bg_crimson text-white">
+                Acquista ora
+            </button>
+        </div>
+    </section>
 
 
 
