--- a/index.html
+++ b/index.html
@@ -205,31 +205,31 @@
         <div class="container container-sm container-md container-xl d-flex flex-wrap peripherals">
             <div class="col-4 col-sm-4 col-md-20 col-xl-20 px-3 thumb_cont pb-3">
             <img src="./img/playstation-5-thumb.png" alt="ps5 pic">
-                <div class="hidden py-3 text-muted">
+                <div class="hidden py-3">
                     Console PS5
                 </div>
             </div>
             <div class="col-4 col-sm-4 col-md-20 col-xl-20 thumb_cont pb-3 px-1">
                 <img src="./img/joypad-thumb.png" alt="joypad pic">
-                <div class="hidden py-3 text-muted">
+                <div class="hidden py-3">
                     Controller wireless Dualsense<i class="fas fa-trademark"></i>
                 </div>
             </div>
             <div class="col-4 col-sm-4 col-md-20 col-xl-20 thumb_cont pb-3 px-1">
                 <img src="./img/headset-thumb.png" alt="headset pic">
-                <div class="hidden py-3 text-muted">
+                <div class="hidden py-3">
                     Cuffie wireless con microfono PULSE 3<i class="fas fa-trademark"></i>
                 </div>
             </div>
             <div class="col-4 col-sm-4 col-md-20 col-xl-20 thumb_cont pb-3 px-1">
                 <img src="./img/remote-thumb.png" alt="remote pic">
-                <div class="hidden py-3 text-muted">
+                <div class="hidden py-3">
                     Telecomando Media
                 </div>
             </div>
             <div class="col-4 col-sm-4 col-md-20 col-xl-20 thumb_cont pb-3 px-1">
                 <img src="./img/camera-thumb.jpg" alt="camera pic">
-                <div class="hidden py-3 text-muted">
+                <div class="hidden py-3">
                     Telecamera HD
                 </div>
             </div>
