--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 <!-- *************/section4 ***************** -->
     
     <section class="five novità bg_dark pb-5">
-        <div class="container-fluid px-5 py-3">
+        <div class="container container-sm container-md container-xl px-5 py-3">
             <h2 class="text-white py-3">
                 Nuove uscite
             </h2>
@@ -266,7 +266,7 @@
             </h5>
         </div>
             
-        <div class="container-fluid d-flex flex-wrap px-4">
+        <div class="container container-sm container-md container-xl d-flex flex-wrap px-4">
             <div class="col-6 col-sm-4 col-md-4 col-xl-2">
                 <div class="card text-white bg_dark p-2">
                     <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
@@ -367,13 +367,45 @@
     </section>
 
     <section class="six py-5 px-5">
-        <h1>
+        <h1 class="text-center">
             Esplora la PlayStation<i class="far fa-registered"></i> 4
         </h1>
-        <p>
-            Giochi incredibili e intrattenimento senza fine.
+        <p class="py-3 mb-4 text-muted text-center">
+            Giochi incredibili e intrattenimento senza fine. <br>
             Non c'è mai stato un momento migliore per giocare sulla tua PS4
         </p>
+        <div class="container container-sm container-md container-xl px-3 d-flex flex-wrap justify-content-center align-items-center">
+            <div class="col-12 col-sm-12 col-md-4 col-xl-4 px-3">
+                <img src="./img/ps4-slim-homepage-image-block.jpg" alt="ps4 pic">
+                <h2>
+                    PlayStation 4
+                </h2>
+                <p class="text-muted">
+                    Giochi incredibili live su PS4, con 1TB di spazio di archiviazione.
+                </p>
+                <button class="btn_rounder bg_blue text-white p-2 px-3">Scopri di più</button>
+            </div>
+            <div class="col-12 col-sm-12 col-md-4 col-xl-4 px-3">
+                <img src="./img/double11-202010-tw-psvr.jpg" alt="vr set pic">
+                <h2>
+                    PlayStation VR
+                </h2>
+                <p class="text-muted">
+                    Oltre 500 titoli ed esperienze di gioco. Scoprili tutti.
+                </p>
+                <button class="btn_rounder bg_blue text-white p-2 px-3">Scopri di più</button>
+            </div>
+            <div class="col-12 col-sm-12 col-md-4 col-xl-4 px-3">
+                <img src="./img/dualshock-4-listing-thumb.jpg" alt="dualshock 4 pic">
+                <h2>
+                    Accessori
+                </h2>
+                <p class="text-muted">
+                    Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.
+                </p>
+                <button class="btn_rounder bg_blue text-white p-2 px-3">Scopri di più</button>
+            </div>
+        </div>
     </section>
 
 
