--- a/index.html
+++ b/index.html
@@ -366,6 +366,8 @@
         </div>
     </section>
 
+<!-- *************/section5 ***************** -->
+    
     <section class="six py-5 px-5">
         <h1 class="text-center">
             Esplora la PlayStation<i class="far fa-registered"></i> 4
@@ -404,6 +406,26 @@
                     Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.
                 </p>
                 <button class="btn_rounder bg_blue text-white p-2 px-3">Scopri di più</button>
+            </div>
+        </div>
+    </section>
+
+<!-- *************/section6 ***************** -->
+
+    <section class="seven bg_grey">
+        <div class="container container-sm container-md container-xl d-flex flex-wrap">
+            <div class="col-12 col-sm-12 col-md-6 col-xl-6 left py-5 py-md-2 py-xl-5 align-items-start">
+                <div class="flex-column justify-content-around py-5 py-md-2">
+                    <img src="./img/ps-plus-logo.png" alt="">
+                    <p class="py-3 pt-4">
+                        Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili sconti esclusivi e altro ancora.
+                    </p>
+                    <button class="btn_rounder text_blue bg_lightgrey px-3 py-2">Esplora PlayStation Plus</button>
+                </div>
+            </div>
+
+            <div class="hidden col-md-6 col-xl-6 right">
+                <img src="/img/ps-plus-april-monthly-games-featured-image-block.png" alt="">
             </div>
         </div>
     </section>
