--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
     <section class="seven bg_grey">
         <div class="container container-sm container-md container-xl d-flex flex-wrap">
             <div class="col-12 col-sm-12 col-md-6 col-xl-6 left py-5 py-md-2 py-xl-5 align-items-start">
-                <div class="flex-column justify-content-around py-5 py-md-2">
+                <div class="d-flex flex-column justify-content-center text-left align-items-start py-5 py-md-2 h-100">
                     <img src="./img/ps-plus-logo.png" alt="">
                     <p class="py-3 pt-4">
                         Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili sconti esclusivi e altro ancora.
@@ -426,6 +426,32 @@
 
             <div class="hidden col-md-6 col-xl-6 right">
                 <img src="/img/ps-plus-april-monthly-games-featured-image-block.png" alt="">
+            </div>
+        </div>
+    </section>
+
+<!-- *************/section7 ***************** -->
+
+    <section class="eight">
+
+    </section>
+
+<!-- *************/section8 ***************** -->
+
+    <section class="nine bg_deepblue">
+        <div class="container container-sm container-md container-xl d-flex flex-wrap">
+            <div class="col-12 col-sm-12 col-md-6 col-xl-6 left py-5 py-md-2 py-xl-5 align-items-start">
+                <div class="d-flex flex-column justify-content-center align-items-start py-5 py-md-2 h-100">
+                    <img src="./img/ps-now-logo-two-column.png" alt="">
+                    <p class="py-5 mb-0 text-white">
+                        Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi per PS4, PS3 e PS2 su PS4 o PC Windows con nuovi titoli aggiunti ogni mese.
+                    </p>
+                    <button class="btn_rounder text_blue bg_lightgrey px-3 py-2 text-body">Esplora PlayStation Now</button>
+                </div>
+            </div>
+
+            <div class="hidden col-md-6 col-xl-6 right">
+                <img src="/img/ps-now-april-featured-image-block.png" alt="">
             </div>
         </div>
     </section>
