--- a/index.html
+++ b/index.html
@@ -368,14 +368,17 @@
 
 <!-- *************/section5 ***************** -->
     
-    <section class="six py-5 px-5">
-        <h1 class="text-center">
-            Esplora la PlayStation<i class="far fa-registered"></i> 4
-        </h1>
-        <p class="py-3 mb-4 text-muted text-center">
-            Giochi incredibili e intrattenimento senza fine. <br>
-            Non c'è mai stato un momento migliore per giocare sulla tua PS4
-        </p>
+    <section class="six py-5">
+        <div class="container container-sm container-md container-xl">
+            <h1 class="text-center px-4">
+                Esplora la PlayStation<i class="far fa-registered"></i> 4
+            </h1>
+            <p class="py-3 mb-4 text-muted text-center">
+                Giochi incredibili e intrattenimento senza fine. <br>
+                Non c'è mai stato un momento migliore per giocare sulla tua PS4
+            </p>
+        </div>
+
         <div class="container container-sm container-md container-xl px-3 d-flex flex-wrap justify-content-center align-items-center">
             <div class="col-12 col-sm-12 col-md-4 col-xl-4 px-3">
                 <img src="./img/ps4-slim-homepage-image-block.jpg" alt="ps4 pic">
@@ -432,8 +435,36 @@
 
 <!-- *************/section7 ***************** -->
 
-    <section class="eight">
+    <section class="eight py-5">
+        <div class="container container-sm container-md container-xl">
+            <h1 class="text-center px-5">
+                Nuovi sconti sul PlayStation Store
+            </h1>
+            <p class="py-3 mb-4 text-muted text-center px-5">
+                Sconti pazzeschi, collezioni curate e saldi stagionali su PS5, PS4 e PS VR, tutti in un unico posto.
+            </p>
+        </div>
+        <div class="container container-sm container-md container-xl d-flex flex-wrap align-items-center justify-content-around">
+            <div class="col-12 col-sm-12 col-md-4 col-xl-4">
+                <div class="p-2">
+                    <img src="./img/playstation-store-games-under-20-spotlight.jpg" alt="">
+                </div>
+            </div>
 
+            <div class="col-12 col-sm-12 col-md-4 col-xl-4">
+                <div class="p-2">
+                    <img src="./img/playstation-store-golden-week-sale-spotlight.jpg" alt="">
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-12 col-md-4 col-xl-4">
+                <div class="p-2">
+                    <img src="./img/playstation-store-free-to-play-spotlight.png" alt="">
+                </div>
+            </div>
+
+
+        </div>
     </section>
 
 <!-- *************/section8 ***************** -->
@@ -446,12 +477,35 @@
                     <p class="py-5 mb-0 text-white">
                         Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi per PS4, PS3 e PS2 su PS4 o PC Windows con nuovi titoli aggiunti ogni mese.
                     </p>
-                    <button class="btn_rounder text_blue bg_lightgrey px-3 py-2 text-body">Esplora PlayStation Now</button>
+                    <button class="btn_rounder text_blue bg_lightergrey px-3 py-2 text-body">Esplora PlayStation Now</button>
                 </div>
             </div>
 
             <div class="hidden col-md-6 col-xl-6 right">
                 <img src="/img/ps-now-april-featured-image-block.png" alt="">
+            </div>
+        </div>
+    </section>
+
+<!-- *************/section9 ***************** -->
+    <section class="ten py-5">
+        <div class="container-xs container-sm container-md">
+            <h2 class="text-center">
+                Seguici sui social media
+            </h2>
+            <div class="d-flex flex-wrap">
+                <div class="col-6 col-sm-3 p-2 py-4">
+                    <img src="./img/twitter.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-3 p-2 py-4">
+                    <img src="./img/facebook.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-3 p-2 py-4">
+                    <img src="./img/instagram.jpg" alt="">
+                </div>
+                <div class="col-6 col-sm-3 p-2 py-4">
+                    <img src="./img/youtube.png" alt="">
+                </div>
             </div>
         </div>
     </section>
