impostata griglia footer

--- a/index.html
+++ b/index.html
@@ -510,6 +510,33 @@
         </div>
     </section>
 
+<!-- *************/section10 ***************** -->
+
+    <footer class="py-5 debug">
+       <div class="container container-sm container-md container-xl d-flex flex-wrap">
+            <div class="col-12 col-sm-12 col-md-12 col-xl-6">
+                cane
+            </div>
+
+            <div class="col-12 col-sm-12 col-md-4 col-xl-2">
+                gatto
+            </div>
+
+            <div class="col-12 col-sm-12 col-md-4 col-xl-2">
+                giovanni
+            </div>
+
+            <div class="col-12 col-sm-12 col-md-4 col-xl-2">
+                sardella
+            </div>
+
+            <div class="col-12 col-sm-12 col-md-12 col-xl-6">
+                columbro
+            </div>
+
+       </div> 
+    </footer>
+
 
 
 
