--- a/index.html
+++ b/index.html
@@ -29,10 +29,9 @@
                         Giochi <img class="chevron" src="./img/chevron-down-solid.svg" alt="">
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS1</a></li>
+                        <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS1</a></li>
+                        <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS1</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
