finito navbar bonus

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                         Giochi <img class="chevron" src="./img/chevron-down-solid.svg" alt="">
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS1</a></li>
-                        <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS1</a></li>
-                        <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS1</a></li>
+                            <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS1</a></li>
+                            <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS1</a></li>
+                            <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS1</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
@@ -39,10 +39,9 @@
                         Hardware <img class="chevron" src="./img/chevron-down-solid.svg" alt="">
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS2</a></li>
+                            <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS2</a></li>
+                            <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS2</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
@@ -50,10 +49,9 @@
                         Servizi <img class="chevron" src="./img/chevron-down-solid.svg" alt="">
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS3</a></li>
+                            <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS3</a></li>
+                            <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS3</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
@@ -61,10 +59,9 @@
                         Novità <img class="chevron" src="./img/chevron-down-solid.svg" alt="">
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS4</a></li>
+                            <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS4</a></li>
+                            <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS4</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
@@ -72,10 +69,9 @@
                         Fai acquisti <img class="chevron" src="./img/chevron-down-solid.svg" alt="">
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS5</a></li>
+                            <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS5</a></li>
+                            <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS5</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
@@ -83,10 +79,9 @@
                         Supporto <img class="chevron" src="./img/chevron-down-solid.svg" alt="">
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS6</a></li>
+                            <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS6</a></li>
+                            <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS6</a></li>
                         </ul>
                     </li>
                     </ul>
@@ -98,10 +93,9 @@
                             My PLaystation <img class="chevron" src="./img/chevron-down-solid.svg" alt="">
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li class="d-flex flex-column align-items-center"><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#"> PS7</a></li>
+                                <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS7</a></li>
+                                <li><img class="ps_icon" src="/img/play-menu-ico.png" alt=""><a class="dropdown-item" href="#">PS7</a></li>
                             </ul>
                         </li>
                         <li class="d-flex align-items-center">
@@ -138,32 +132,32 @@
     <section class="two py-5">
         <div class="griglia container container-sm container-md container-xl d-flex flex-wrap">
             <div class="col-6 col-sm-4 col-md-4 col-xl-2 g-2">
-                <div class="thumb p-2 active">
+                <div class="thumb px-2 pt_2 active">
                     <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
                 </div>
             </div>
             <div class="col-6 col-sm-4 col-md-4 col-xl-2">
-                <div class="thumb p-2">
+                <div class="thumb px-2 pt_2">
                     <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
                 </div>
             </div>
             <div class="col-6 col-sm-4 col-md-4 col-xl-2">
-                <div class="thumb p-2">
+                <div class="thumb px-2 pt_2">
                     <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
                 </div>
             </div>
             <div class="col-6 col-sm-4 col-md-4 col-xl-2">
-                <div class="thumb p-2">
+                <div class="thumb px-2 pt_2">
                     <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
                 </div>
             </div>
             <div class="col-6 col-sm-4 col-md-4 col-xl-2">
-                <div class="thumb p-2">
+                <div class="thumb px-2 pt_2">
                     <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
                 </div>
             </div>
             <div class="col-6 col-sm-4 col-md-4 col-xl-2">
-                <div class="thumb p-2">
+                <div class="thumb px-2 pt_2">
                     <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
                 </div>
             </div>
