--- a/index.html
+++ b/index.html
@@ -122,9 +122,11 @@
             <p class="py-3">
                 Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico. disponibile in esclusiva su PS5.
             </p>
-            <button class="btn btn_rounder bg_crimson text-white">
-                Acquista ora
-            </button>
+            <div class="btn_rounder d-inline-block button_cont">
+                <button class="btn btn_rounder bg_crimson text-white">
+                    Acquista ora
+                </button>
+            </div>
         </div>
     </section>
 
@@ -243,9 +245,11 @@
             <p>
                 Tova un amico e partite insieme per l'avventura più folle delle vostre vite in It Takes Two, un gioco d'avventura cooperativa a piattaforme che stravolge il suo genere.
             </p>
-            <button class="btn btn_rounder bg_crimson text-white">
-                Acquista ora
-            </button>
+            <div class="btn_rounder d-inline-block button_cont">
+                <button class="btn btn_rounder bg_crimson text-white">
+                    Acquista ora
+                </button>
+            </div>
         </div>
     </section>
 
