aggiunto effetto hover shadow a bottone grigio

--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                     <p class="py-3 pt-4">
                         Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili sconti esclusivi e altro ancora.
                     </p>
-                    <button class="btn_rounder text_blue bg_lightgrey px-3 py-2">Esplora PlayStation Plus</button>
+                    <button class="btn_rounder shadow_ text_blue bg_lightgrey px-3 py-2">Esplora PlayStation Plus</button>
                 </div>
             </div>
 
