finiti effetti hover bonus

--- a/index.html
+++ b/index.html
@@ -504,16 +504,16 @@
             </h2>
             <div class="d-flex flex-wrap">
                 <div class="col-6 col-sm-3 p-2 py-4">
-                    <img src="./img/twitter.jpg" alt="">
+                    <img src="./img/twitter.jpg" class="cp" alt="">
                 </div>
                 <div class="col-6 col-sm-3 p-2 py-4">
-                    <img src="./img/facebook.jpg" alt="">
+                    <img src="./img/facebook.jpg" class="cp" alt="">
                 </div>
                 <div class="col-6 col-sm-3 p-2 py-4">
-                    <img src="./img/instagram.jpg" alt="">
+                    <img src="./img/instagram.jpg" class="cp" alt="">
                 </div>
                 <div class="col-6 col-sm-3 p-2 py-4">
-                    <img src="./img/youtube.png" alt="">
+                    <img src="./img/youtube.png" class="cp" alt="">
                 </div>
             </div>
         </div>
